Fleshed out remaining pages. Need to fix styling on firefox

--- a/web/src/css/help_style.css
+++ b/web/src/css/help_style.css
@@ -3,9 +3,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+	text-align: center;
 }
 
 #help-content > h2 {
 	color: #03BABD;
-	padding-bottom: 20%;
+	padding-bottom: 10%;
+}
+
+#help-content > button {
+	margin: 30px;
 }
